--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Automate the Network.
 email: chris@automatethenetwork.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Dedicated to blogs while I tackle the Cisco DevNet Associate exam. 
+  Automation. Network Programmability. Cisco Devnet Study.
   Hosted on GitHub Pages.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
